<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".SplashScreen">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#fff"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/pacifico"
    android:text="@string/welcome"/>
    <ImageView
        android:id="@+id/shop"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:src="@drawable/list"
        android:contentDescription="@string/todo" />
    <TextView
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:fontFamily="@font/pacifico"
        android:layout_gravity="center"
        android:text="@string/shoping_list_app"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>